--- a/MIARMA/src/main/resources/application.properties
+++ b/MIARMA/src/main/resources/application.properties
@@ -10,7 +10,7 @@ springdoc.api-docs.path=/api-docs
 
 spring.jpa.properties.hibernate.hbm2ddl.charset_name=UTF-8
 
-spring.servlet.multipart.max-file-size=5MB
-spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.max-file-size=1GB
+spring.servlet.multipart.max-request-size=1GB
 
 storage.location=./uploads
